force-app/main/default/objects/Trip__c/fields/Check_In_Check_Out_Validation_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Check_Out_Validation_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check_In/ Check-Out Validation Checkbox</label>
    <type>Checkbox</type>
</CustomField>