force-app/main/default/objects/Trip__c/fields/CheckInTime__c.field-meta.xml
<CustomField>
    <fullName>CheckInTime__c</fullName>
    <label>CheckInTime</label>
    <type>DateTime</type>
</CustomField>