force-app/main/default/objects/Trip__c/fields/CheckOutTime__c.field-meta.xml
<CustomField>
    <fullName>CheckOutTime__c</fullName>
    <label>CheckOutTime</label>
    <type>DateTime</type>
</CustomField>