force-app/main/default/objects/Trip__c/fields/Date_Time_ETA__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_ETA__c</fullName>
    <label>Date &amp; Time ETA</label>
    <type>DateTime</type>
</CustomField>