force-app/main/default/objects/Trip__c/fields/Emergency_Note__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Note__c</fullName>
    <label>Emergency Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>