force-app/main/default/objects/Trip__c/fields/Emergency_Request__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Request</label>
    <type>Checkbox</type>
</CustomField>