force-app/main/default/objects/Trip__c/fields/HVAC_Lights__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Lights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HVAC/Lights</label>
    <type>Checkbox</type>
</CustomField>