force-app/main/default/objects/Trip__c/fields/Night_Work__c.field-meta.xml
<CustomField>
    <fullName>Night_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Night Work</label>
    <type>Checkbox</type>
</CustomField>