force-app/main/default/objects/Trip__c/fields/Primary_Technician__c.field-meta.xml
<CustomField>
    <fullName>Primary_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Technician</label>
    <referenceTo>Technician__c</referenceTo>
    <relationshipLabel>Trips</relationshipLabel>
    <relationshipName>Trips</relationshipName>
    <type>Lookup</type>
</CustomField>