force-app/main/default/objects/Trip__c/fields/Return_Trip_Details__c.field-meta.xml
<CustomField>
    <fullName>Return_Trip_Details__c</fullName>
    <label>Return Trip Details</label>
    <type>TextArea</type>
</CustomField>