force-app/main/default/objects/Trip__c/fields/Return_Trip_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Trip_Reason__c</fullName>
    <label>Return Trip Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Need Reschedule</fullName>
            </value>
            <value>
                <fullName>Need Client Guidance</fullName>
            </value>
            <value>
                <fullName>Need Quote</fullName>
            </value>
            <value>
                <fullName>Need Materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>