force-app/main/default/objects/Trip__c/fields/Return_Trip_Required__c.field-meta.xml
<CustomField>
    <fullName>Return_Trip_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Trip Required</label>
    <type>Checkbox</type>
</CustomField>