force-app/main/default/objects/Trip__c/fields/Revisit_Required__c.field-meta.xml
<CustomField>
    <fullName>Revisit_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revisit Required</label>
    <type>Checkbox</type>
</CustomField>