force-app/main/default/objects/Trip__c/fields/Security_Required__c.field-meta.xml
<CustomField>
    <fullName>Security_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Security Required</label>
    <type>Checkbox</type>
</CustomField>