force-app/main/default/objects/Trip__c/fields/SecurityNote__c.field-meta.xml
<CustomField>
    <fullName>SecurityNote__c</fullName>
    <label>SecurityNote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>