force-app/main/default/objects/Trip__c/fields/Service_Requested__c.field-meta.xml
<CustomField>
    <fullName>Service_Requested__c</fullName>
    <label>Service Requested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>