force-app/main/default/objects/Trip__c/fields/Site_Email1__c.field-meta.xml
<CustomField>
    <fullName>Site_Email1__c</fullName>
    <label>Site Email</label>
    <type>Email</type>
</CustomField>