force-app/main/default/objects/Trip__c/fields/Site_Email__c.field-meta.xml
<CustomField>
    <fullName>Site_Email__c</fullName>
    <label>Site Email</label>
    <length>250</length>
    <type>Text</type>
</CustomField>