force-app/main/default/objects/Trip__c/fields/Site_Manager__c.field-meta.xml
<CustomField>
    <fullName>Site_Manager__c</fullName>
    <label>Site Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>