force-app/main/default/objects/Trip__c/fields/Site_Phone1__c.field-meta.xml
<CustomField>
    <fullName>Site_Phone1__c</fullName>
    <label>Site Phone</label>
    <type>Phone</type>
</CustomField>