force-app/main/default/objects/Trip__c/fields/Site_Phone__c.field-meta.xml
<CustomField>
    <fullName>Site_Phone__c</fullName>
    <label>Site Phone</label>
    <length>250</length>
    <type>Text</type>
</CustomField>