force-app/main/default/objects/Trip__c/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade</label>
    <referenceTo>Trade__c</referenceTo>
    <relationshipLabel>Trips</relationshipLabel>
    <relationshipName>Trips</relationshipName>
    <type>Lookup</type>
</CustomField>