force-app/main/default/objects/Trip__c/fields/Trip_Checked_In_By__c.field-meta.xml
<CustomField>
    <fullName>Trip_Checked_In_By__c</fullName>
    <label>Trip Checked-In By</label>
    <length>250</length>
    <type>Text</type>
</CustomField>