force-app/main/default/objects/Trip__c/fields/Trip_Checked_Out__c.field-meta.xml
<CustomField>
    <fullName>Trip_Checked_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trip Checked-Out</label>
    <type>Checkbox</type>
</CustomField>