force-app/main/default/objects/Trip__c/fields/Work_Requested__c.field-meta.xml
<CustomField>
    <fullName>Work_Requested__c</fullName>
    <label>Work Requested</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>