force-app/main/default/objects/Trip__c/recordTypes/Revisit_Requested.recordType-meta.xml
<RecordType>
    <fullName>Revisit_Requested</fullName>
    <active>true</active>
    <label>Revisit Requested</label>
</RecordType>