force-app/main/default/objects/Trip__c/recordTypes/Trip_Completed.recordType-meta.xml
<RecordType>
    <fullName>Trip_Completed</fullName>
    <active>true</active>
    <label>Trip Completed</label>
</RecordType>