force-app/main/default/objects/Trip__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendor__c</columns>
    <columns>Site_Email__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CheckInTime__c</columns>
    <columns>Trip_Checked_In_By__c</columns>
    <columns>Trip_Checked_Out__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Status__c</columns>
    <columns>Work_Orders__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>